[package]
name = "kaikosdk"
version = "0.1.0"
edition = "2024"

[lib]
name = "kaikosdk"

[dependencies]
prost = { version = "0.14.3", default-features = false }
pbjson = { version = "0.9.0", default-features = false }
pbjson-types = { version = "0.9.0", default-features = false }
serde = { version = "1.0", default-features = false }
tonic = { version = "0.14.5", features = [
    "transport",
    "codegen",
    "gzip"
] } #currently equivalent to default-features
tonic-prost = { version = "0.14.5", default-features = false }
